# GraphicsEngine

./: .gitignore  CMakeLists.txt  Engine.sln  README.md
Engine/: ApplicationClass.h  D3DClass.cpp  D3DClass.h  Engine.vcxproj  Engine.vcxproj.filters  FBX.props  SystemClass.h  shader-error.txt
Engine/assets/models/: Arc.txt  Arrow.txt  ScaleHandle.txt  X Bot.fbx
Engine/assets/models/spaceship/low-poly/: nave-modelo.fbx
Engine/assets/shaders/: AlphamapPixelShader.hlsl  AlphamapVertexShader.hlsl  CommandGenerationComputeShader.hlsl  FontPixelShader.hlsl  FontVertexShader.hlsl  FrustumCullingComputeShader.hlsl  GPUDrivenPBRVertexShader.hlsl  LODSelectionComputeShader.hlsl  LightPixelShader.hlsl  LightVertexShader.hlsl  LightmapPixelShader.hlsl  LightmapVertexShader.hlsl  MultiTexturePixelShader.hlsl  MultiTextureVertexShader.hlsl  NormalMapPixelShader.hlsl  NormalMapVertexShader.hlsl  PBRPixelShader.hlsl  PBRVertexShader.hlsl  PixelShader.hlsl  PointLightPixelShader.hlsl  PointLightVertexShader.hlsl  SkyDomePixelShader.hlsl  SkyDomeVertexShader.hlsl  SkyboxPixelShader.hlsl  SkyboxVertexShader.hlsl  SpaceSkyboxPixelShader.hlsl  SpaceSkyboxVertexShader.hlsl  SpecularMapPixelShader.hlsl  SpecularMapVertexShader.hlsl  StreamCompactionComputeShader.hlsl  TextureVertexShader.hlsl  UpdateDrawArgsComputeShader.hlsl  WorldMatrixGenerationComputeShader.hlsl
Engine/assets/sprites/: sprite_data_01.txt
Engine/assets/sprites/ui/: cursor.tga  cursor_data.txt
Engine/src/Core/: ApplicationClass.cpp  ApplicationClass.h  SystemClass.cpp
Engine/src/Core/Application/: Application.cpp  Application.h
Engine/src/Core/Common/: EngineTypes.h
Engine/src/Core/Input/: InputManager.cpp  InputManager.h
Engine/src/Core/Input/Management/: InputManager.cpp  InputManager.h
Engine/src/Core/System/: CommonTimer.cpp  CommonTimer.h  Logger.h  PerformanceLogger.cpp  PerformanceLogger.h  PerformanceProfiler.cpp  PerformanceProfiler.h  RenderingBenchmark.cpp  RenderingBenchmark.h  SystemManager.cpp  SystemManager.h  Timer.cpp  Timer.h
Engine/src/Entry/: main.cpp
Engine/src/GUI/Components/: ModelListUI.cpp  ModelListUI.h  TransformUI.cpp  TransformUI.h  UserInterface.cpp  UserInterface.h
Engine/src/GUI/Windows/: DirectXViewport.cpp  DirectXViewport.h  MainWindow.cpp  MainWindow.h  PerformanceWidget.cpp  PerformanceWidget.h  ThemeManager.cpp  ThemeManager.h
Engine/src/Graphics/: BitmapClass.cpp  BitmapClass.h  CameraClass.h  D3DClass.cpp  D3DClass.h  LightClass.cpp  LightClass.h  ModelClass.cpp  ModelClass.h  TextureClass.cpp
Engine/src/Graphics/D3D11/: D3D11Device.cpp  D3D11Device.h  D3DClass.h
Engine/src/Graphics/Math/: Frustum.cpp  Frustum.h  Position.cpp  Position.h
Engine/src/Graphics/Rendering/: Bitmap.cpp  Bitmap.h  Camera.cpp  Camera.h  DisplayPlane.cpp  DisplayPlane.h  Font.cpp  Font.h  GPUDrivenRenderer.cpp  GPUDrivenRenderer.h  IndirectDrawBuffer.cpp  IndirectDrawBuffer.h  Light.cpp  Light.h  RenderTexture.cpp  RenderTexture.h  Sprite.cpp  Sprite.h
Engine/src/Graphics/Resource/: Model.cpp  Model.h  Text.cpp  Text.h  Texture.cpp  Texture.h
Engine/src/Graphics/Resource/Environment/: SkyDome.cpp  SkyDome.h  Skybox.cpp  Skybox.h  SpaceSkybox.cpp  SpaceSkybox.h  Zone.cpp  Zone.h
Engine/src/Graphics/Scene/: ModelList.cpp  ModelList.h  SelectionManager.cpp  SelectionManager.h
Engine/src/Graphics/Scene/Management/: ModelList.cpp  ModelList.h  SelectionManager.cpp  SelectionManager.h
Engine/src/Graphics/Shaders/: AlphaMapShader.cpp  AlphaMapShader.h  BaseShader.cpp  BaseShader.h  ColorShader.cpp  ColorShader.h  ColorShaderClass.cpp  ColorShaderClass.h  ComputeShader.cpp  ComputeShader.h  FontShader.cpp  FontShader.h  LightMapShader.cpp  LightMapShader.h  LightShader.cpp  LightShader.h  LightShaderClass.cpp  LightShaderClass.h  MultiTextureShader.cpp  MultiTextureShader.h  NormalMapShader.cpp  NormalMapShader.h  PBRShader.cpp  PBRShader.h  ShaderManager.cpp  ShaderManager.h  SpecularMapShader.cpp  SpecularMapShader.h  TextureShader.cpp  TextureShader.h  TextureShaderClass.cpp
Engine/src/Graphics/Shaders/Environment/: SkyDomeShader.cpp  SkyDomeShader.h  SkyboxShader.cpp  SkyboxShader.h  SpaceSkyboxShader.cpp  SpaceSkyboxShader.h
Engine/src/Graphics/Shaders/Management/: ShaderManager.cpp  ShaderManager.h
Engine/src/Graphics/Shaders/ShaderClasses/: TextureShaderClass.cpp  TextureShaderClass.h
Engine/src/Graphics/UI/: ModelListUI.h  TransformUI.cpp  TransformUI.h  UserInterface.cpp  UserInterface.h
Engine/src/Graphics/Utils/: RenderUtils.cpp  RenderUtils.h
Engine/src/Main/: main.cpp
Engine/src/Math/: Transform.h
